feat: add /api/v1/webhook endpoint
