# server/api/controllers/webhook/router.ts
@@ -1,0 +1,3 @@
+import express from 'express';
+import controller from './controller';
+export default express.Router().post('/', controller.post);
